# SpatialIntruments

./: CMakeLists.txt  add_synth.cpp  add_synth.hpp  audio.cpp  audio2.cpp  chaos_synth.cpp  chaos_synth.hpp  modal.cpp
